--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -38,6 +38,9 @@
          <property name="maximum">
           <number>10000</number>
          </property>
+         <property name="displayIntegerBase">
+          <number>10</number>
+         </property>
         </widget>
        </item>
        <item>
